# AI_document_analyser

./: .gitignore  pyproject.toml
backend/: migrate.py
backend/app/: main.py
backend/app/agents/: classifier_agent.py  combined_extraction_agent.py  commercial_agent.py  compliance_agent.py  deadline_agent.py  deliverables_agent.py  risks_agent.py  scope_agent.py  staffing_agent.py  summary_agent.py  technical_agent.py
backend/app/api/routes/: auth.py  chat.py  rfp.py
backend/app/core/: config.py  llm.py
backend/app/db/: database.py
backend/app/graph/: state.py  workflow.py
backend/app/memory/: chat_memory.py  sessions.json
backend/app/schemas/: rfp_schema.py
backend/app/services/: batcher.py  chunker.py  extractor.py  pdf_parser.py
backend/app/utils/: json_parser.py
backend/app/vectordb/: chroma_client.py  embedder.py  retriever.py  store.py
backend/uploads/: RFP_Document_Intelligence_Agent_PoC.docx
frontend/: .gitignore  index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  Dashboard.jsx  Sidebar.jsx  UploadSection.jsx
