[project]
name = "rfp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.0",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "numpy>=2.4.6",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "uvicorn>=0.47.0",
]
